--- a/experience/multi_project.tex
+++ b/experience/multi_project.tex
@@ -4,9 +4,11 @@ When working in a multi-project there is a set of nw challenges compared to work
 
 \subsection{Organisation}
 % Hordan er tingene blevet organiseret? De forskellige former for møder, slack, issues[gitlab], repoes 
-When working with a large group of people it is necessary to enforce an organisational structure in order to efficiently establish an overview of the project. We need to know far the different groups are with their separate parts of the project and what kind of problems they are facing. If one group cannot make any serious progress because of some kind of hindrance, it is important that the other groups are notified, in case that they are depending on their work. We found the wast majority of these problems, by organising what resembles a Scrum stand up meeting, at the supergroup meetings where everyone reported their individual group status'. If a group had a problem they were not themselves able to sort out, they would be able to draw help from the other groups, or move some of their tasks to other groups which would accept them. It should be noted that it was only project wide tasks that could be transferred. Such tasks could be updating the GitLab server or implementing a logging system.
+When working with a large group of people it is necessary to enforce an organisational structure in order to efficiently establish an overview of the project. As described in \cref{subsec:supergroup_meetings} we needed to know how far the different groups were with their separate parts of the project and what kind of problems they were facing. If one group could not make any serious progress because of some hindrance, it was important that the other groups were notified, in case that they were depending on their work. We found the wast majority of these problems, by organising what resembles a Scrum stand up meeting, at the super-group meetings where everyone reported their individual group status'. If a group had a problem they were not themselves able to sort out, they would be able to draw help from the other groups, or move some of their tasks to other groups which would accept them. It should be noted that it was only project wide tasks that could be transferred. Such tasks could be updating the GitLab server or implementing a logging system. 
+The super-group meetings was accompanied by smaller project wide meetings were a specific topic would be discussed. One of these meetings were concerned about what kind of license we were going to use for the project 
 
-In order to 
+A set of tools were used in order to ensure that the groups were able to communicate with each other. In addition to the super-group meetings, the individual groups would occasionally arrange meetings, as described in \cref{subsec:small_meetings}. 
+
 
 \subsection{Working Environment}
 % Hvordan sørger mna for at holde et godt arbejdsmijø? Konflikthåndtering, møder(brydder ind), ansvar
